src/test/deca/context/invalid/SansObjet/DeclVar-GE-float-string-float.deca
// Description:
//    Declaration of a float variable using >= operation between a string variable and float .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.33) Illegal operand type.
// 
// Historique: 
//    cree le 11/01/2022 

{
    string x =  "World"; 
    float y = 2.5; 
    float z = "World" >= 2.5; 
}
